--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -2,7 +2,9 @@
 
 = Introduction =
 
-Add your content here.
+We'll use Subversion for the project so that we can all work off of the same copy of the code. It will allow us to do the project without having to meet up somewhere.
+
+If you've never used Subversion before, you should read the first paragraph on its Wikipedia page (http://en.wikipedia.org/wiki/Subversion_%28software%29) to see what it is and why it's used.
 
 
 = Details =
